charts/hub/ocp-srv-install/templates/event-collector-service/event-collector-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-collector-service
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: event-collector-service
    deploymentconfig: event-collector-service
  sessionAffinity: None
  type: ClusterIP
