charts/hub/ocp-srv-install/templates/event-collector-service/event-collector-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: event-collector-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: event-collector-service
    weight: 100
  wildcardPolicy: None
